welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:13: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:27: error: expected class or object definition
def tampon(){
^SlugHunting:32: error: Unmatched closing brace '}' ignored here
}
^